--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://cdn.bootcss.com/antd/3.3.3/antd.js"></script>
+    <link href="https://cdn.bootcss.com/antd/3.3.3/antd.min.css" rel="stylesheet">
   <title>React App</title>
 </head>
 
